crates/pardosa-genome/tests/compile_fail/serde_default_field.rs
use pardosa_genome::GenomeSafe;

#[derive(GenomeSafe)]
struct Bad {
    #[serde(default)]
    value: u32,
}

fn main() {}
